<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">GeoIP</string>
    <string name="action_search">Search</string>
    <string name="action_clear">Clear</string>
    <string name="action_copy">Copy</string>
    <string name="action_detect">Detect</string>
    <string name="action_open_map">View on Map</string>
    <string name="label_ip_address">IP Address</string>
    <string name="label_location">Location</string>
    <string name="label_coordinates">Coordinates</string>
    <string name="label_organization">Organization</string>
    <string name="hint_enter_ip">Enter IP address (optional)</string>
    <string name="map_placeholder_text">Map will be displayed here</string>
    <string name="permission_required">Location permission required</string>
    <string name="permission_denied">Permission denied</string>
    <string
        name="error_network"
    >Network error. Please check your connection.</string>
    <string name="error_invalid_ip">Invalid IP address format.</string>
    <string
        name="error_host_not_found"
    >Could not resolve hostname. Please check the spelling or try an IP address.</string>
    <string
        name="error_lookup_failed"
    >Failed to look up IP information.</string>
    <string name="error_not_found">IP address not found.</string>
    <string
        name="error_unknown"
    >An unknown error occurred. Please try again.</string>
    <string name="loading">Loading location data…</string>
    <string
        name="location_copied"
    >Location information copied to clipboard</string>
    <string name="ip_copied">IP address copied to clipboard</string>
    <string
        name="location_not_available"
    >Location information not available</string>
    <string name="auto_detecting">Auto-detecting your IP address…</string>
    <string name="ip_address_label">IP Address:</string>
    <string name="ip_type_label">IP Type:</string>
    <string name="country_label">Country:</string>
    <string name="region_label">Region:</string>
    <string name="city_label">City:</string>
    <string name="organization_label">Organization:</string>
    <string name="isp_label">ISP:</string>
    <string name="coordinates_label">Coordinates:</string>
    <string name="latitude_label">Latitude:</string>
    <string name="longitude_label">Longitude:</string>
    <string name="ip_info_api">Powered by IPinfo.io</string>
    <string name="location_marker_title">Location</string>
</resources>
